--- a/LightMixer/View/MainWindow.xaml
+++ b/LightMixer/View/MainWindow.xaml
@@ -8,8 +8,10 @@
 		mc:Ignorable="d" 
    		x:Class="LightMixer.View.MainWindow"
         Title="MainWindow" 
+        Background="Black"
+        Foreground="White"
 		Height="1024" 
-		Width="768">
+		Width="768" WindowStyle="SingleBorderWindow">
 	<Window.Resources>
 		<ViewModel:MainWindowViewModel x:Key="MainWindowViewModelDataSource" d:IsDataSource="True"/>
 	</Window.Resources>
@@ -17,9 +19,6 @@
 		<Binding Mode="OneWay" Source="{StaticResource MainWindowViewModelDataSource}"/>
 	</Window.DataContext>
     <StackPanel Orientation="Vertical" >
-        <Border BorderThickness="1" MinHeight="75">
-            
-        </Border>
         <TabControl MinHeight="600" TabStripPlacement="Left" >
         	  <TabControl.Resources>  
         	  	  <Style TargetType="{x:Type TabItem}">     
@@ -35,27 +34,48 @@
                                          </DataTemplate> 
                                  </Setter.Value>     
                           </Setter>
-                  </Style> 
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="TabItem">
+                                <Grid Name="Panel">
+                                    <ContentPresenter x:Name="ContentSite"
+                                        VerticalAlignment="Center"
+                                        HorizontalAlignment="Center" 
+                                        ContentSource="Header"
+                                        Margin="10,2"/>
+                                </Grid>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter TargetName="Panel" Property="Background" Value="Gray" />
+                                    </Trigger>
+                                    <Trigger Property="IsSelected" Value="False">
+                                        <Setter TargetName="Panel" Property="Background" Value="#333333" />
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style> 
               </TabControl.Resources>
-        	<TabItem Header="Manual Dmx &#xd;&#xa;Control" Margin="0">
+        	<TabItem Foreground="White" Header="Manual Dmx &#xd;&#xa;Control" Margin="0">
         		
 				<View:ManualDmxControl>
 					
 				</View:ManualDmxControl>
         	</TabItem>
 
-            <TabItem Header="Service&#xd;&#xa;Setting" Margin="0">
+            <TabItem Foreground="White" Header="Service&#xd;&#xa;Setting" Margin="0" >
 
                 <View:DmxControlSetting>
 
                 </View:DmxControlSetting>
             </TabItem>
-            <TabItem Header="Laser &#xd;&#xa;Console" Margin="0">
+            <TabItem Header="Laser &#xd;&#xa;Console" Margin="0" Foreground="White">
                 <View:LaserControlerView>
                     
                 </View:LaserControlerView>
             </TabItem>
-            <TabItem Header="Dmx &#xd;&#xa;Console" Margin="0">
+            <TabItem Header="Dmx &#xd;&#xa;Console" Margin="0" Foreground="White">
                 <View:DmxConsoleView>
                     
                 </View:DmxConsoleView>
