Remove Midi Dependence, Add Support for services. Improve virtual dj performance for 2021

--- a/LightMixerBlazor/Pages/Scene.razor
+++ b/LightMixerBlazor/Pages/Scene.razor
@@ -5,10 +5,10 @@
 @using Radzen.Blazor.Rendering
 @using Radzen.Blazor
 
+
 <h1>Scene @id</h1>
 
-<Zone id="pool" sceneId="@id" ></Zone>
-<Zone id="led" sceneId="@id"></Zone>
+<Zone id="basement" sceneId="@id"></Zone>
 
 @code {
 
