--- a/LightMixerBlazor/Shared/NavMenu.razor
+++ b/LightMixerBlazor/Shared/NavMenu.razor
@@ -19,7 +19,13 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="scene/outdoor">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Scene
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Outdoor
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="scene/indoor">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Indoor
             </NavLink>
         </li>
     </ul>
