--- a/LightMixer/View/Automation/TimeLine.xaml
+++ b/LightMixer/View/Automation/TimeLine.xaml
@@ -5,8 +5,48 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LightMixer.View.Automation"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+             d:DesignHeight="450" d:DesignWidth="800" Width="{Binding TimeLineWidth,Mode=OneWayToSource}">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="visibilityConverter"/>
+    </UserControl.Resources>
+    <Border Background="AliceBlue">
+        <Grid>
             
-    </Grid>
+            <ItemsControl ItemsSource="{Binding Items}" >
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Border DataContext="{Binding}" Width="{Binding DisplayLenght}" Background="{Binding Color}" Height="50">
+                        <StackPanel Orientation="Horizontal">
+                                <Thumb Visibility="{Binding RelativeSource={RelativeSource AncestorType=ItemsControl},  Path=DataContext.IsEditable, Converter={StaticResource visibilityConverter}}" Width="5" SizeChanged="Thumb_SizeChanged" DragDelta="Thumb_DragDelta" DragEnter="Thumb_DragEnter" DragCompleted="Thumb_DragCompleted" >
+                                <Thumb.Style>
+                                    <Style TargetType="{x:Type Thumb}">
+                                        <Style.Triggers>
+                                            <Trigger Property="IsDragging" Value="True">
+                                                <Setter Property="Cursor" Value="SizeWE" />
+                                            </Trigger>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Cursor" Value="SizeWE" />
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Thumb.Style>
+                            </Thumb>
+                            <TextBlock Text="{Binding Name}"></TextBlock>
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+
+        </ItemsControl>
+            <Border HorizontalAlignment="Left" Height="80" Width="5"    Background="Orange" Margin="{Binding PositionTicker}">
+
+            </Border>
+        </Grid>
+    </Border>
+
 </UserControl>
