--- a/LightMixerAngular/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/LightMixerAngular/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -1,20 +1,4 @@
 <div style="height:25px;width:25px" [style.background-color]="Color">
 </div>
 <h1 id="tableLabel" back>{{TrackName}}</h1>
-
-<p *ngIf="!scenes?.length"><em>Loading...</em></p>
-
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="scenes.length">
-  <thead>
-    <tr>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let scene of scenes">
-      <td>{{ scene.name }}</td>
-    </tr>
-  </tbody>
-</table>
-
-
+<scenes></scenes>
