--- a/LightMixer/View/Automation/AutomationZone.xaml
+++ b/LightMixer/View/Automation/AutomationZone.xaml
@@ -29,6 +29,13 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
+            <ItemsControl ItemsSource="{Binding Laser}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <automation:LaserDesigner DataContext="{Binding}"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </StackPanel>
     </GroupBox>
 </UserControl>
