--- a/LightMixer/View/Automation/AutomationDesigner.xaml
+++ b/LightMixer/View/Automation/AutomationDesigner.xaml
@@ -95,8 +95,9 @@
                     <TextBlock Width="50" Text="{Binding Value, ElementName=slider}" />
                     <Button Content="RST" Width="50" Command="{Binding ResetBeatCommand}"  />
                 </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="R" TextAlignment="Right" Margin="0,0,0,5" Width="100"/>
+                <StackPanel  Orientation="Horizontal">
+                    <Rectangle Fill="{Binding SharedEffectModel.Color, Converter={StaticResource ColorConverter}}" Width="20"></Rectangle>
+                    <TextBlock Text="R" TextAlignment="Right" Margin="0,0,0,5" Width="80"/>
                     <Slider Value="{Binding SharedEffectModel.Red}" Maximum="255" Width="300" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
